# vote-backend

./: .gitignore  AGENTS.md  API_DOCUMENTATION.md  CMakeLists.txt  CMakePresets.json  Containerfile  README.md  ansible.cfg  config.json  vcpkg.json
.github/workflows/: hosted-ninja-vcpkg_submod.yml  hosted-pure-workflow.yml
ansible/inventory/group_vars/: all.yml
ansible/playbooks/: build-and-test.yml  deploy-local-test.yml  deploy-local.yml
ansible/roles/build-native/tasks/: main.yml
ansible/roles/deploy-local/files/: nginx.conf
ansible/roles/deploy-local/tasks/: main.yml
ansible/roles/deploy-local/templates/: drogon-postgres.container.j2
include/vote-backend/controllers/: AuthController.h  CategoryController.cc  CategoryController.hpp  QuestionController.cc  QuestionController.hpp  RestfulAnswerOptionsCtrl.cc  RestfulAnswerOptionsCtrl.h  RestfulAnswerOptionsCtrlBase.cc  RestfulAnswerOptionsCtrlBase.h  RestfulCategoriesCtrl.cc  RestfulCategoriesCtrl.h  RestfulCategoriesCtrlBase.cc  RestfulCategoriesCtrlBase.h  RestfulLanguagesCtrl.cc  RestfulLanguagesCtrl.h  RestfulLanguagesCtrlBase.cc  RestfulLanguagesCtrlBase.h  RestfulQuestionsCtrl.cc  RestfulQuestionsCtrl.h  RestfulQuestionsCtrlBase.cc  RestfulQuestionsCtrlBase.h  RestfulUserAnswersCtrl.cc  RestfulUserAnswersCtrl.h  RestfulUserAnswersCtrlBase.cc  RestfulUserAnswersCtrlBase.h  UserController.hpp
include/vote-backend/filters/: AdminAuthFilter.hpp  JwtAuthFilter.h
include/vote-backend/models/: AnswerOptions.cc  AnswerOptions.h  Categories.cc  Categories.h  Categories.hpp  Languages.cc  Languages.h  Questions.cc  Questions.h  UserAnswers.cc  UserAnswers.hpp  Users.cc  Users.h  Users.hpp  model.json
include/vote-backend/utils/: ErrorResponse.hpp  JwtService.h  JwtService.hpp  UserIdHash.hpp
ports/drogon/: 0006-fix-spdlog-build-option.patch  portfile.cmake  vcpkg.json
quadlets/: drogon-postgres.container  vote-backend-nginx@.container  vote-backend.container  vote-backend@.container  vote-backend@.container.j2  vote.network
sql/: 001_init.sql  002_auth.sql  003_seed_data.sql  004_test_data.sql  init.sql
src/: main.cpp
src/controllers/: AuthController.cc  AuthController.cpp  CategoryController.cpp  QuestionController.cpp  UserController.cpp
src/filters/: AdminAuthFilter.cc  AdminAuthFilter.cpp  JwtAuthFilter.cc  JwtAuthFilter.cpp
src/models/: AnswerOptions.cpp  Categories.cpp  Languages.cpp  Questions.cpp  UserAnswers.cpp  Users.cpp
src/utils/: ErrorResponse.cpp  JwtService.cc  JwtService.cpp  UserIdHash.cc  UserIdHash.cpp
tests/: admin_auth_filter_test.cpp  config.json  jwt_auth_filter_test.cpp  jwt_service_test.cpp  main_test.cpp  users_model_test.cpp
tests/integration/: CMakeLists.txt  integration_helpers.hpp  integration_test.cpp  test_endpoints.cpp
